# brainnetwork

./: main.py  pyproject.toml
notebook/: multple_mice.ipynb  single_mice.ipynb
src/brainnetwork/: __init__.py  decoding.py  entropy.py  loaddata.py  network.py  visualization.py
